--- a/mcontacts.html
+++ b/mcontacts.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>dwreTeam</title>
+	<title>#contacts</title>
 	<meta http-equiv ="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-	<link href="css\mmain.css" rel="stylesheet">
+	<link href="css\macb.css" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<h1><span style="color: #669d34">dwre</span>Team</h1>
-		<h4>E-Commerce Experts</h4>
+		<h1 style="text-decoration: underline;">#contacts</h1>
 	</header>
 
 	<div class="dropdown" style="float:left;">
@@ -31,6 +30,10 @@
 			  
   		</div>
 	</div>
+	<div class="back" style="float:right;">
+  			<a href="mdwreteam.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
+  	</div>
+	
 
 	<script type="text/javascript">
 		function myFunction() {
@@ -49,6 +52,5 @@
 			}
 		}
 	</script>
-		
 </body>
 </html>
