--- a/mblog.html
+++ b/mblog.html
@@ -31,7 +31,7 @@
   		</div>
 	</div>
 	<div class="back" style="float:right;">
-  			<a href="mdwreteam.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
+  			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
 	
 
