--- a/mcontacts.html
+++ b/mcontacts.html
@@ -54,7 +54,7 @@
 				<textarea id="message" class="field" required name="message" rows="8"></textarea>
 			</div>
 			<div class="field-block">
-				<input id="check" name="check" checked type="checkbox">
+				<input id="check" name="check" type="checkbox">
 				<span class="check-text">I agree with the use of my data</span>
 			</div>
 			<button id="button" class="button" type="submit">Send</button>
