--- a/mobile/about.html
+++ b/mobile/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>#blog</title>
+	<title>#about</title>
 	<meta http-equiv ="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header style="color: #808080; font-size: 7vw;">
-		<h1 style="text-decoration: underline;">#blog</h1>
+		<h1 style="text-decoration: underline;">#about</h1>
 	</header>
 	<div class="dropdown" style="float:left;">
   		<button onclick="myFunction()" class="dropbtn">
@@ -19,13 +19,14 @@
   			<div class="menu"></div>
   		</button>
   		<div id="myDropdown" class="dropdown-content" style="left:0;">
-			  <a href="mabout.html" style="color: #808080">#about</a>
-			  <a href="mcontacts.html" style="color: #808080">#contacts</a>
-			  <a href="mblog.html" style="color: #808080">#blog</a>
-			  <a href="mproducts.html" style="color: #669d34">Products</a>
-			  <a href="moutsourcing.html" style="color: #ffff66">Outsourcing</a>
-			  <a href="mpds.html" style="color: #ff5050">PDS</a>
-			  <a href="moutstaff.html" style="color: #0000ff">Outstaff</a>
+			  <a href="about.html" style="color: #808080">#about</a>
+			  <a href="contacts.html" style="color: #808080">#contacts</a>
+			  <a href="blog.html" style="color: #808080">#blog</a>
+			  <a href="products.html" style="color: #669d34">Products</a>
+			  <a href="outsourcing.html" style="color: #ffff66">Outsourcing</a>
+			  <a href="pds.html" style="color: #ff5050">PDS</a>
+			  <a href="outstaff.html" style="color: #0000ff">Outstaff</a>
+			  
   		</div>
 	</div>
 	<div class="back" style="float:right;">
