--- a/mobile/index.html
+++ b/mobile/index.html
@@ -22,13 +22,13 @@
   			<div class="menu"></div>
   		</button>
   		<div id="myDropdown" class="dropdown-content" style="left:0;">
-			  <a href="mabout.html" style="color: #808080">#about</a>
-			  <a href="mcontacts.html" style="color: #808080">#contacts</a>
-			  <a href="mblog.html" style="color: #808080">#blog</a>
-			  <a href="mproducts.html" style="color: #669d34">Products</a>
-			  <a href="moutsourcing.html" style="color: #ffff66">Outsourcing</a>
-			  <a href="mpds.html" style="color: #ff5050">PDS</a>
-			  <a href="moutstaff.html" style="color: #0000ff">Outstaff</a>
+			  <a href="about.html" style="color: #808080">#about</a>
+			  <a href="contacts.html" style="color: #808080">#contacts</a>
+			  <a href="blog.html" style="color: #808080">#blog</a>
+			  <a href="products.html" style="color: #669d34">Products</a>
+			  <a href="outsourcing.html" style="color: #ffff66">Outsourcing</a>
+			  <a href="pds.html" style="color: #ff5050">PDS</a>
+			  <a href="outstaff.html" style="color: #0000ff">Outstaff</a>
 			  
   		</div>
 	</div>
