pre last version

--- a/desktop/outsoursing.html
+++ b/desktop/outsoursing.html
@@ -24,11 +24,144 @@
 		<a href="index.html"><span style="color: #669d34">dwre</span><span style="color:white">Team</span></a>
 	</div>
 	<div id="overflow">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
+		<p>Outsourcing model in Software Development implies that Company that owns the Product, or that is responsible for Project Execution, hires the Vendor for full or partial Project Implementation.</p>
+        <p>Vendor, or in other words Technological Partner, takes responsibilities for Project Implementation, what implies full control over the development process and acceptance the obligation to make the whole Scope of work done in Time and Budget.</p>
+        <p>Service Offerings dwreTeam provides as an Outsourcing Software Development Services Provider include the following:</p>
+        <table width="100%" border="1" cellpadding="4" cellspacing="0">
+      		<caption>Salesforce Commerce Cloud B2C (Demandware)</caption>
+        	<tr>
+        		<td>
+        			Headless e-Commerce Solutions Implementation
+                    <br>
+        			<span style="color: gray; padding-left: 4vw; font-size: 1.1vw">microservice e-Commerce architecture that implies using SFCC Open Commerce API (OCAPI) REST Interface</span>
+        		</td>
+        		<td>
+        			<span style="color: #ffff66">&#10004;</span>
+        		</td>
+        	</tr>
+        	<tr>
+        		<td>
+        			Salesforce Reference Architecture (SFRA) implementation
+                    <br>  
+        			<span style="color: gray; padding-left: 4vw; font-size: 1.1vw">mobile-first architecture of reference online store that follows best of modern technological trends</span>
+        		</td>
+        		<td>
+        			<span style="color: #ffff66">&#10004;</span>
+        		</td>
+        	</tr>
+                <td>
+                    SiteGenesis implementation
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">classical architecture of reference online store with huge ecosystem</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    SSiteGenesis to Salesforce Reference Architecture (SFRA) migration 
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">migration existing online store from classical architecture to the newest reference platrofm SFRA</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    Existing implementation upgrade
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">upgrade existing online store to the newest version of SiteGenesis or SFRA, integration plugings upgrade</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    Features development
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">new features development for the online store, existing features ongoing upgrade</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    Storefront performance analysis and optimization
+                    <br>   
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">storefront performance analysis, code and functionality optimization, resources consumption optimization</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    PLP, PDP, Checkout tuning 
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">3 main areas of the online store - Category, Product and Checkout pages</span> 
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    Data exchance setup, configuration, optimization  
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">organizing data exchange between SFCC and data provider / consumenrs (CRM, OMS, CMS, DAM, PIM, Inventory)</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    LINK Cartridges implementation
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">creating reusable integration plugins for Payment Processing, Fraud Detection, Tax Calculation, PIM/CRM/OMS/CMS/DAM/Inventroy <span style="padding-left: 4vw">data exchange</span></span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    LINK Cartridges upgrade
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">code improvements, bugfixig, re-certification</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    Business Manager Extensions implementation 
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">Custom Solutions for Business Manager that bring additional, business-specific functionality for Merchants</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+                <td>
+                    Reusable components implementation
+                    <br>  
+                    <span style="color: gray; padding-left: 4vw; font-size: 1.1vw">Page Designer components, integration plugins, automation scripts for using within the organization</span>
+                </td>
+                <td>
+                    <span style="color: #ffff66">&#10004;</span>
+                </td>
+            </tr>
+        </table>
+        <p><a href="contacts.html"  style="color: #ffff66">Contact form</a></p>
+	</div>
+	<div class="list">
+		<div class="prod1" style="color: #669d34; animation-name: example; animation-duration: 5s; animation-delay: 0; ">
+			<a href="outsoursing.html" style="text-decoration: none; color: #ffff66;font-size: 1.5vw;">#main</a>
+		</div>
+
+		<div class="prod2" style="color: #669d34; animation-name: example; animation-duration: 5s; animation-delay: 0; margin-left: 11vw;">
+			<a href="outsoursing2.html" style="text-decoration: none; color: white;font-size: 1.5vw;">#advanteges-disadvanteges</a>
+		</div>
+		<div class="prod3" style="color: #669d34; animation-name: example; animation-duration: 5s; animation-delay: 0; margin-left: 10vw;">
+			<a href="outsoursing3.html" style="text-decoration: none; color: white;font-size: 1.5vw;">#choose-or-not</a>
+		</div>
 	</div>
 	
 </body>
