--- a/desktop/products.html
+++ b/desktop/products.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
 	<link href="css\style.css" rel="stylesheet">
+	<link rel="stylesheet" href="dist/css/liquid-slider.css">
 </head>
 <body>
 	<svg id="svg1" version="1" viewBox="0 0 1419 731" preserveAspectRatio="none">      
@@ -22,14 +23,24 @@
 	<div class="home">
 		<a href="index.html"><span style="color: #669d34">dwre</span><span style="color:white">Team</span></a>
 	</div>
-	<div id="overflow">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
+	<div id="overflow" style="top: 15vh">
+		<p>Our first Product is in active phase of the Development Process at the moment.</p>
+    	<p>Something really exciting, related to Salesforce Commerce Cloud (Demandware) platform, will be released <span style="color: red">soon!</span></p>
 	</div>
+	<div class="list" style="display: none;">
+		<div class="prod1" style="color: #669d34; animation-name: example; animation-duration: 5s; animation-delay: 0; margin-left: 7vw;">
+			<a href="products.html" style="text-decoration: none; color: #669d34;font-size: 1.5vw;">#main</a>
+		</div>
+
+		<div class="prod2" style="color: #669d34; animation-name: example; animation-duration: 5s; animation-delay: 0; margin-left: 25vw;">
+			<a href="product2.html" style="text-decoration: none; color: white;font-size: 1.5vw;">#when-to-use</a>
+		</div>
+		
+	</div>
+	
 	
 </body>
 </html>
+
+
 
