--- a/mobile/index.html
+++ b/mobile/index.html
@@ -26,9 +26,9 @@
 			  <a href="contacts.html" style="color: #808080">#contacts</a>
 			  <a href="blog.html" style="color: #808080">#blog</a>
 			  <a href="products.html" style="color: #669d34">Products</a>
-			  <a href="outsourcing.html" style="color: #ffff66">Outsourcing</a>
-			  <a href="pds.html" style="color: #ff5050">PDS</a>
-			  <a href="outstaff.html" style="color: #0000ff">Outstaff</a>
+			  <a href="menu2.html" style="color: #ffff66">Outsourcing</a>
+			  <a href="menu3.html" style="color: #ff5050">PDS</a>
+			  <a href="menu4.html" style="color: #0000ff">Outstaff</a>
 			  
   		</div>
 	</div>
