--- a/mobile/menu3.html
+++ b/mobile/menu3.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Products</title>
+	<title>Outsourcing</title>
 	<meta http-equiv ="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-	<link href="css\mstyle.css" rel="stylesheet">
+	<link href="css\pds.css" rel="stylesheet">
 </head>
 <body>
-	<header style="color: #669d34; font-size: 7vw;">
-		<h1>Products</h1>
+	<header>
+		<h1>Product Development <br>Services</h1>
 	</header>
 
 	<div class="dropdown" style="float:left;">
@@ -33,11 +33,12 @@
 	<div class="back" style="float:right;">
   			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
-	<div id="text">
-  		<p>Our first Product is in active phase of the Development Process at the moment.</p>
-    	<p>Something really exciting, related to Salesforce Commerce Cloud (Demandware) platform, will be released <span style="color: red">soon!</span></p>
+	<div id="menu">
+  		<ul class="list">
+  			<li style="margin-top: 9vw"><a href="pds.html">#main</a></li>
+  			<li style="margin-top: 7vw"><a href="pds2.html">#when-to-use</a></li>
+  		</ul>
   	</div>
 	<script src="js/js.js"></script>
-		
 </body>
 </html>
