--- a/mobile/outsourcing3.html
+++ b/mobile/outsourcing3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Products</title>
+	<title>Outsourcing</title>
 	<meta http-equiv ="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
@@ -9,8 +9,8 @@
 	<link href="css\mstyle.css" rel="stylesheet">
 </head>
 <body>
-	<header style="color: #669d34; font-size: 7vw;">
-		<h1>Products</h1>
+	<header style="color: #ffff66; font-size: 6vw;">
+		<h1>Outsourcing</h1>
 	</header>
 
 	<div class="dropdown" style="float:left;">
@@ -31,13 +31,23 @@
   		</div>
 	</div>
 	<div class="back" style="float:right;">
-  			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
+  			<a href="menu2.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
 	<div id="text">
-  		<p>Our first Product is in active phase of the Development Process at the moment.</p>
-    	<p>Something really exciting, related to Salesforce Commerce Cloud (Demandware) platform, will be released <span style="color: red">soon!</span></p>
+  		<ul>
+			<li>
+				Yes, if you need someone to implement Project for you in the most cost and technologically efficient ways.
+			</li>
+		</ul>
+		<ul>
+        	<li>
+        		No, if you need more than Software Development Services - <a href="pds.html" style="color: #ffff66; font-size: 4vw">Product Development Services</a>.
+        	</li>
+        </ul>
+
+        <p>dwreTeam is would be glad to discuss the option to become your Technological Partner, <a href="contacts.html" style="color: #ffff66">contact us</a>.</p>
+	</div>
   	</div>
 	<script src="js/js.js"></script>
-		
 </body>
 </html>
