--- a/mobile/outstaff3.html
+++ b/mobile/outstaff3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Products</title>
+	<title>Outstaff</title>
 	<meta http-equiv ="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
@@ -9,8 +9,8 @@
 	<link href="css\mstyle.css" rel="stylesheet">
 </head>
 <body>
-	<header style="color: #669d34; font-size: 7vw;">
-		<h1>Products</h1>
+	<header style="color: #0000ff; font-size: 7vw;">
+		<h1>Outstaff</h1>
 	</header>
 
 	<div class="dropdown" style="float:left;">
@@ -31,13 +31,22 @@
   		</div>
 	</div>
 	<div class="back" style="float:right;">
-  			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
+  			<a href="menu4.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
 	<div id="text">
-  		<p>Our first Product is in active phase of the Development Process at the moment.</p>
-    	<p>Something really exciting, related to Salesforce Commerce Cloud (Demandware) platform, will be released <span style="color: red">soon!</span></p>
+  		<ul>
+			<li>
+				Yes, if you already have an onsite team and just want to support it with an offshore specialists, and if you are fine to preserve full ongoing control over the Software Development Process.
+			</li>
+		</ul>
+		<ul>
+        	<li>
+        		No, if you need more and are open for Next Level of <a href="outsoursing.html" style="color: #0000ff; font-size: 4vw">Partnership</a>, when your Partner can bring you not only People fits the needs of your Project, but can fully or parially implement Project for you applying its Best Practices, while you can contentrate at Product, Services, Business, Marketing, Sales.
+        	</li>
+        </ul>
+
+        <p><a href="contacts.html" style="color: #0000ff">Contact us</a> and we will determine together with you whether Staff Augmentation approach is the best choice or it is worth to prefer <a href="outsoursing.html" style="color: #0000ff">another approach</a>.</p>
   	</div>
 	<script src="js/js.js"></script>
-		
 </body>
 </html>
