--- a/desktop/contacts.html
+++ b/desktop/contacts.html
@@ -22,9 +22,9 @@
 	<div class="home">
 		<a href="index.html"><span style="color: #669d34">dwre</span><span style="color:white">Team</span></a>
 	</div>
-	<div id="overflow">
+	<div id="overflow" style="top: 14vh; height: 73vh">
 		<div class="container">
-			<h2>You can leave information and we will contact with you</h2>
+			<h3>Post your message and we will contact you</h3>
 			<form id="contactForm" action="handler.php" method="post">
 				<div class="field-block">
 					<label for="name">Name:</label>
@@ -40,11 +40,11 @@
 				</div>
 				<div class="field-block">
 					<label for="message">Message:</label>
-					<textarea id="message" class="field" required name="message" rows="10"></textarea>
+					<textarea id="message" class="field" required name="message" rows="7"></textarea>
 				</div>
 				<div class="field-block">
 					<input id="check" name="check" type="checkbox">
-					<span class="check-text">I agree with the use of my data</span>
+					<span class="check-text">I agree to use of my data</span>
 				</div>
 				<button id="button" class="button" type="submit">Send</button>
 				<div class="result">
@@ -54,23 +54,21 @@
 			</form>
 		</div>
 		<div class="info">
-			<h2>Or you can contact with us by yorself</h2>
+			<h3>Or you can contact with us by yorself</h3>
 			<p>
 				<br>
 					<span style="text-decoration: underline;">Phone number:</span>
-				<br>
 					+380938485935
 			</p>
 			<p>
 					<span style="text-decoration: underline;">e-mail:</span>
-				<br>
 					okotelevets31@gmail.com
 				<br>
 			</p>
 			<p>
-					<span style="text-decoration: underline;">Office adress:</span>
+					<span style="text-decoration: underline;">Office adress:</span> 79000, Lviv, Morshynska st., 3, Ukraine
 			</p>
-			<div style="overflow:hidden;width: 500px;position: relative;"><iframe width="500" height="400" src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Morshynska%2C%203%20%2CLviv%2C%20Ukraine+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 2px;background: #fff;">Powered by <a href="https://embedgooglemaps.com/en/"></a> & <a href="https://iamsterdamcard.it"></a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
+			<div style="overflow:hidden;width: 500px;position: relative;"><iframe width="500" height="260" src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Morshynska%2C%203%20%2CLviv%2C%20Ukraine+(%D0%9D%D0%B0%D0%B7%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 2px;background: #fff;">Powered by <a href="https://embedgooglemaps.com/en/"></a> & <a href="https://iamsterdamcard.it"></a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
 		</div>
 	</div>
 	
