--- a/mobile/menu1.html
+++ b/mobile/menu1.html
@@ -23,7 +23,7 @@
 			  <a href="about.html" style="color: #808080">#about</a>
 			  <a href="contacts.html" style="color: #808080">#contacts</a>
 			  <a href="blog.html" style="color: #808080">#blog</a>
-			  <a href="products.html" style="color: #669d34">Products</a>
+			  <a href="menu1.html" style="color: #669d34">Products</a>
 			  <a href="menu2.html" style="color: #ffff66">Outsourcing</a>
 			  <a href="menu3.html" style="color: #ff5050">PDS</a>
 			  <a href="menu4.html" style="color: #0000ff">Outstaff</a>
@@ -33,9 +33,14 @@
 	<div class="back" style="float:right;">
   			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
-	<div id="text">
-  		<p>Our first Product is in active phase of the Development Process at the moment.</p>
-    	<p>Something really exciting, related to Salesforce Commerce Cloud (Demandware) platform, will be released <span style="color: red">soon!</span></p>
+	<div id="menu">
+  		<ul class="list">
+  			<li><a href="products.html">Page 1</a></li>
+  			<li style="margin-top: 3vw"><a href="products2.html">Page 2</a></li>
+  			<li style="margin-top: 3vw"><a href="products3.html">Page 3</a></li>
+  			<li style="margin-top: 3vw"><a href="products4.html">Page 4</a></li>
+  			<li style="margin-top: 3vw"><a href="products5.html">Page 5</a></li>
+  		</ul>
   	</div>
 	<script src="js/js.js"></script>
 		
