--- a/mobile/outstaff.html
+++ b/mobile/outstaff.html
@@ -24,17 +24,32 @@
 			  <a href="contacts.html" style="color: #808080">#contacts</a>
 			  <a href="blog.html" style="color: #808080">#blog</a>
 			  <a href="products.html" style="color: #669d34">Products</a>
-			  <a href="outsourcing.html" style="color: #ffff66">Outsourcing</a>
-			  <a href="pds.html" style="color: #ff5050">PDS</a>
-			  <a href="outstaff.html" style="color: #0000ff">Outstaff</a>
+			  <a href="menu2.html" style="color: #ffff66">Outsourcing</a>
+			  <a href="menu3.html" style="color: #ff5050">PDS</a>
+			  <a href="menu4.html" style="color: #0000ff">Outstaff</a>
 			  
   		</div>
 	</div>
 	<div class="back" style="float:right;">
-  			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
+  			<a href="menu4.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
 	<div id="text">
-  		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
+  		Staff Augmentation in Software Development is an approach that implies involving individual Software Enginners to support Vendor's team for the period of the Project.
+        <p>Staff Augmentation implies precense of the Partner between the Vendor and Software Engineers, that is responsible for Tallent Acquisition, HR Management, Supply Provisioning, Jurisdictial Support and other services Software Engineers need to perform efficiently.</p>
+        <p>dwreTeam would be happy to become you Partner and find, gather and make working efficiently your remote team under Staff Augmentation approach.</p>
+        <table width="95%" cellpadding="5" align="center">
+        	<tr align="center">
+        		<td width="400">Staff Augmentation</td>
+        		<td style="border-right: none;"><span style="color: red; font-size: 18px">Salesforce Commerce Cloud</span><span style="padding: 2.1vw"><span style="color: green; font-size: 10px">Node.js</span><span style="padding: 2.1vw"><span style="color: white; font-size: 14px">Hybris</span></td>
+        	</tr>
+        	<tr align="center">
+        		<td width="400">Technological Offerings of dwreTeam</td>
+        		<td style="border-right: none;"><span style="color: yellow; font-size: 20px">Demandware</span><span style="padding: 1.4vw"></span><span style="color: violet; font-size: 13px">JavaScript</span><span style="padding: 1.4vw"></span>
+              <span style="color: blue; font-size: 13px">Apex</span><span style="padding: 1.4vw"></span><span style="color: pink; font-size: 16px">CloudCraze</span><span style="padding: 1.4vw"></span>
+              <span style="color: gray; font-size: 10px">React.js</span><span style="padding: 1.4vw"></span><span style="color: orange; font-size: 29">Magento</span></td>
+        	</tr>
+        </table>
+        <p><a href='contacts.html' style="color: #0000ff">Contact us</a> to discuss the options of building your remote team.</p>
   	</div>
 	<script src="js/js.js"></script>
 </body>
