--- a/mobile/products4.html
+++ b/mobile/products4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>#blog</title>
+	<title>Products</title>
 	<meta http-equiv ="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
@@ -9,9 +9,10 @@
 	<link href="css\mstyle.css" rel="stylesheet">
 </head>
 <body>
-	<header style="color: #808080; font-size: 7vw;">
-		<h1 style="text-decoration: underline;">#blog</h1>
+	<header style="color: #669d34; font-size: 7vw;">
+		<h1>Products</h1>
 	</header>
+
 	<div class="dropdown" style="float:left;">
   		<button onclick="myFunction()" class="dropbtn">
   			<div class="menu"></div>
@@ -22,18 +23,20 @@
 			  <a href="about.html" style="color: #808080">#about</a>
 			  <a href="contacts.html" style="color: #808080">#contacts</a>
 			  <a href="blog.html" style="color: #808080">#blog</a>
-			  <a href="products.html" style="color: #669d34">Products</a>
-			  <a href="menu2.html" style="color: #ffff66">Outsourcing</a>
-			  <a href="menu3.html" style="color: #ff5050">PDS</a>
-			  <a href="menu4.html" style="color: #0000ff">Outstaff</a>
+			  <a href="menu1.html" style="color: #669d34">Products</a>
+			  <a href="outsourcing.html" style="color: #ffff66">Outsourcing</a>
+			  <a href="pds.html" style="color: #ff5050">PDS</a>
+			  <a href="outstaff.html" style="color: #0000ff">Outstaff</a>
+			  
   		</div>
 	</div>
 	<div class="back" style="float:right;">
-  			<a href="index.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
+  			<a href="menu1.html" style="color: white; background-color: #1a1a1a; font-size: 42px; text-decoration: none">&#10008;</a>
   	</div>
-  	<div id="text">
+	<div id="text">
   		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
   	</div>
 	<script src="js/js.js"></script>
+		
 </body>
 </html>
